diesel_compile_tests/tests/fail/select_requires_valid_grouping2.stderr
error[E0271]: type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
  --> tests/fail/select_requires_valid_grouping2.rs:45:10
   |
LL |         .select((users::name, users::id));
   |          ^^^^^^ type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
   |
note: expected this to be `diesel::expression::is_contained_in_group_by::Yes`
  --> tests/fail/select_requires_valid_grouping2.rs:5:1
   |
 LL | / table! {
 LL | |     users {
 LL | |         id -> Integer,
 LL | |         name -> Text,
...  |
LL | | }
   | |_^
note: required for `users::columns::id` to implement `ValidGrouping<users::columns::name>`
  --> tests/fail/select_requires_valid_grouping2.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 1 redundant requirement hidden
   = note: required for `(users::columns::name, users::columns::id)` to implement `ValidGrouping<users::columns::name>`
   = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `SelectDsl<(users::columns::name, users::columns::id)>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `id: IsContainedInGroupBy<id>` is not satisfied
  --> tests/fail/select_requires_valid_grouping2.rs:51:10
   |
LL |         .select((users::all_columns, posts::all_columns, comments::id));
   |          ^^^^^^ unsatisfied trait bound
   |
help: the trait `diesel::expression::IsContainedInGroupBy<comments::columns::id>` is not implemented for `users::columns::id`
  --> tests/fail/select_requires_valid_grouping2.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: if your query contains columns from several tables in your group by or select clause make sure to call `allow_columns_to_appear_in_same_group_by_clause!` with these columns
   = help: the following other types implement trait `diesel::expression::IsContainedInGroupBy<T>`:
             `users::columns::id` implements `diesel::expression::IsContainedInGroupBy<posts::columns::id>`
             `users::columns::id` implements `diesel::expression::IsContainedInGroupBy<posts::columns::title>`
             `users::columns::id` implements `diesel::expression::IsContainedInGroupBy<posts::columns::user_id>`
             `users::columns::id` implements `IsContainedInGroupBy<hair_color>`
             `users::columns::id` implements `diesel::expression::IsContainedInGroupBy<users::columns::id>`
             `users::columns::id` implements `diesel::expression::IsContainedInGroupBy<users::columns::name>`
   = note: required for `(users::columns::id, posts::columns::id)` to implement `diesel::expression::IsContainedInGroupBy<comments::columns::id>`
note: required for `comments::columns::id` to implement `ValidGrouping<(users::columns::id, posts::columns::id)>`
  --> tests/fail/select_requires_valid_grouping2.rs:23:9
   |
LL |         id -> Integer,
   |         ^^
   = note: 2 redundant requirements hidden
   = note: required for `((id, name, hair_color), (id, title, user_id), id)` to implement `ValidGrouping<(users::columns::id, posts::columns::id)>`
   = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `SelectDsl<((id, name, hair_color), ..., ...)>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `id: IsContainedInGroupBy<id>` is not satisfied
  --> tests/fail/select_requires_valid_grouping2.rs:51:10
   |
LL |         .select((users::all_columns, posts::all_columns, comments::id));
   |          ^^^^^^ unsatisfied trait bound
   |
help: the trait `diesel::expression::IsContainedInGroupBy<comments::columns::id>` is not implemented for `posts::columns::id`
  --> tests/fail/select_requires_valid_grouping2.rs:15:9
   |
LL |         id -> Integer,
   |         ^^
   = note: if your query contains columns from several tables in your group by or select clause make sure to call `allow_columns_to_appear_in_same_group_by_clause!` with these columns
   = help: the following other types implement trait `diesel::expression::IsContainedInGroupBy<T>`:
             `posts::columns::id` implements `diesel::expression::IsContainedInGroupBy<posts::columns::id>`
             `posts::columns::id` implements `diesel::expression::IsContainedInGroupBy<posts::columns::title>`
             `posts::columns::id` implements `diesel::expression::IsContainedInGroupBy<posts::columns::user_id>`
             `posts::columns::id` implements `IsContainedInGroupBy<hair_color>`
             `posts::columns::id` implements `diesel::expression::IsContainedInGroupBy<users::columns::id>`
             `posts::columns::id` implements `diesel::expression::IsContainedInGroupBy<users::columns::name>`
   = note: required for `(posts::columns::id,)` to implement `diesel::expression::IsContainedInGroupBy<comments::columns::id>`
   = note: 1 redundant requirement hidden
   = note: required for `(users::columns::id, posts::columns::id)` to implement `diesel::expression::IsContainedInGroupBy<comments::columns::id>`
note: required for `comments::columns::id` to implement `ValidGrouping<(users::columns::id, posts::columns::id)>`
  --> tests/fail/select_requires_valid_grouping2.rs:23:9
   |
LL |         id -> Integer,
   |         ^^
   = note: 2 redundant requirements hidden
   = note: required for `((id, name, hair_color), (id, title, user_id), id)` to implement `ValidGrouping<(users::columns::id, posts::columns::id)>`
   = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `SelectDsl<((id, name, hair_color), ..., ...)>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
